# claude-usage

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  release.sh  vite.config.ts
.claude-plugin/: marketplace.json
.github/workflows/: release.yml
docs/plans/: 2026-02-24-session-project-path-design.md
hooks/: claude-usage-hook.sh  install.sh
lat.md/: architecture.md  backend.md  data-flow.md  features.md  frontend.md  infrastructure.md  lat.md
plugin/: .mcp.json  README.md
plugin/.claude-plugin/: plugin.json
plugin/commands/: learn.md  qbuild.md  setup.md
plugin/hooks/: hooks.json
plugin/mcp/: dependencies.py
plugin/scripts/: observe.js  report-tokens.sh  session-end-learn.js  session-sync.js
src/: App.jsx  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/claude-integration/commands/: quill-build.md  quill-learn.md  quill-setup.md
src-tauri/claude-integration/scripts/: auto-setup.cjs  paths.cjs  report-tokens.sh
src-tauri/claude-integration/skills/: setup-SKILL.md
src-tauri/claude-integration/templates/: claude-md-section.md
src-tauri/icons/: icon.icns
src-tauri/src/: ai_client.rs  auth.rs  claude_setup.rs  config.rs  fetcher.rs  git_analysis.rs  learning.rs  lib.rs  main.rs  memory_optimizer.rs  models.rs  prompt_utils.rs  restart.rs  server.rs  sessions.rs  storage.rs
src/components/: SectionHeader.tsx  TitleBar.jsx  TitleBar.tsx  UsageDisplay.jsx  UsageDisplay.tsx  UsageRow.jsx  UsageRow.tsx
(+89 files in other folders)
