[package]
name = "claude-usage"
version = "0.2.0"
edition = "2024"

[lib]
name = "claude_usage_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-window-state = "2"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
axum = "0.8"
tokio = { version = "1", features = ["net"] }
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2"
rand = "0.8"
hex = "0.4"
